[tool.poetry]
name = "pybooklib"
version = "2.0.0"
description = ""
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.25.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
